# tuxlink

./: .gitattributes  .gitignore  .gitmodules  .stylelintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  UPGRADING.md  VERSIONING.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
dev/tools/sstv-proto/: .gitignore  Cargo.toml  README.md
hf-channel-sim/: CHANGELOG.md  Cargo.toml  README.md
hf-channel-sim/.github/workflows/: ci.yml
hf-channel-sim/docs/: cross-validation.md
hf-channel-sim/src/: analysis.rs  channel.rs  fading.rs  lib.rs  noise.rs  params.rs  report.rs  rng.rs
hf-channel-sim/tests/: cli.rs  cross_validation.rs  properties.rs
hf-channel-sim/tests/fixtures/: README.md
sonde/: .gitignore  Cargo.toml  README.md
sonde/crates/sonde-fec/: Cargo.toml  README.md
sonde/crates/sonde-phy/: Cargo.toml
sonde/crates/sonde-rig-cm108/: Cargo.toml  README.md
sonde/crates/sonde-rig-rts/: Cargo.toml  README.md
sonde/crates/sonde-rx/: Cargo.toml
sonde/crates/sonde-tx/: Cargo.toml
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/logging/: tuxlink-events-v1.zdict
src-tauri/capabilities/: compose.json  default.json  forms-webview.json  help.json  logging.json  pop-aprschat.json  pop-elmer.json  pop-routines.json  pop-station-intelligence.json  pop-tacmap.json  stations.json  wizard.json
src-tauri/d3zwe/: Cargo.toml
src-tauri/d3zwe/src/: cli.rs  endpoint.rs  main.rs  openai.rs  print.rs  uds.rs
src-tauri/examples/: ardop_connect.rs  seed_test_messages.rs
src-tauri/icons/: icon.icns
src-tauri/packaging/: com.tuxlink.app.policy
src-tauri/proptest-regressions/position/: mod.txt
src-tauri/resources/basemap/: README.md  provenance.json  region-manifest.json
src-tauri/resources/cat-ptt/: catptt_bridge.py
src-tauri/resources/catalog/: winlink-queries.txt
src-tauri/resources/propagation/: ssn-forecast.json
src-tauri/resources/wine-vara-setup/: LICENSE  VENDORED.md
src-tauri/resources/wle-forms/: SHA256SUMS
src-tauri/resources/workflows/: build-routine.manifest.json
src-tauri/src/: app_backend.rs  bootstrap.rs  build_support.rs  compose_window.rs  config.rs  connection_history.rs  consent_gate.rs  help_window.rs  lib.rs  logging_window.rs  main.rs  mcp_connection.rs  mcp_ports.rs  menu.rs  modem_commands.rs  modem_status.rs  native_mailbox.rs  onboarding_bridge.rs  parity_check.rs  pat_client.rs  pat_config.rs  pat_paths.rs  pat_process.rs  secondary_window.rs  session_log.rs  session_log_emit.rs  stations_window.rs  test_helpers.rs  theme_state.rs  tray.rs  ui_commands.rs  uninstall_cleanup.rs  user_folders.rs  winlink_backend.rs  wizard.rs  wizard_phase.rs
src-tauri/src/basemap/: commands.rs  download.rs  mod.rs  packs.rs  region_manifest.rs  validate.rs
src-tauri/src/catalog/: channels_api.rs  channels_cache.rs  commands.rs  composer.rs  evidence.rs  mod.rs  parser.rs  reply.rs  stations.rs  stations_cache.rs  stations_disk.rs
src-tauri/src/contacts/: commands.rs  limiter.rs  mod.rs  observation.rs  reachability.rs  store.rs  suggest.rs
src-tauri/src/dock/: commands.rs  mod.rs  park_notify.rs  registry.rs
src-tauri/src/elmer/: approval.rs  commands.rs  config_commands.rs  events.rs  executor.rs  injection_tests.rs  keyring.rs  memory_estimate.rs  mod.rs  model_config_state.rs  provider.rs  session.rs  transcript_sink.rs
src-tauri/src/favorites/: commands.rs  mod.rs  store.rs
src-tauri/src/forms/: catalog.rs  draft_library.rs  http_server.rs  import.rs  mod.rs  multipart.rs  parse.rs  pdf_export.rs  sequence.rs  serialize.rs  skin.rs  txt_template.rs  types.rs  updater.rs  validation.rs  wle_templates.rs
src-tauri/src/ft8/: alsa_source.rs  arbiter.rs  clock.rs  commands.rs  e2e_tests.rs  events.rs  meter.rs  mod.rs  records.rs  service.rs  sweep.rs  testutil.rs  traits.rs  waterfall.rs
src-tauri/src/geomag/: mod.rs
src-tauri/src/grib/: commands.rs  composer.rs  mod.rs
src-tauri/src/identity/: address.rs  cms_verify.rs  commands.rs  handle.rs  keyring_keys.rs  mod.rs  service.rs  store.rs
src-tauri/src/logging/: bounded_timer.rs  commands.rs  dict.rs  disk_consumer.rs  event.rs  export.rs  fanout.rs  filter_layer.rs  free_disk_guard.rs  logging_handle.rs  manifest.rs  mod.rs  redact.rs  retention.rs  settings.rs  state_dir.rs  subscriber.rs  summary.rs  ui_consumer.rs  visit.rs  wire_sanitize.rs
src-tauri/src/mcp/: mod.rs  router.rs
src-tauri/src/media/: commands.rs  mod.rs  transcode.rs
src-tauri/tests/: catalog_listing_parse.rs  config_test.rs  consent_gate_test.rs  credential_debug_audit.rs  credential_struct_source_scan.rs  detailed_mode_revert_test.rs  emission_coverage_test.rs  export_during_writes_test.rs  forms_capability_scope.rs  forms_test.rs  gpsd_fake_test.rs  logging_blocklist_corpus.rs  logging_runtime_boundary_test.rs  menu_test.rs  no_opaque_container_emissions.rs  pat_client_test.rs  pat_config_test.rs  pat_process_test.rs  probes_no_tx_apis.rs  probes_radio_safe.rs  propagation_live.rs  redaction_integration.rs  retention_sweep_test.rs  search_integration.rs  session_log_boundary_test.rs  session_log_test.rs  tray_test.rs  ui_commands_test.rs  winlink_backend_test.rs  winlink_credentials_test.rs  winlink_message_golden_test.rs  wire_sanitizer_integration.rs  wizard_integration_test.rs  wizard_persist_cms_test.rs
src-tauri/tux-rig/: Cargo.toml
src-tauri/tuxlink-agent-frontend/: Cargo.toml
src-tauri/tuxlink-agent-runner/: Cargo.toml
src-tauri/tuxlink-capture/: Cargo.toml
src-tauri/tuxlink-ft8/: Cargo.toml  PROVENANCE.md
src-tauri/tuxlink-jt9/: Cargo.toml
src-tauri/tuxlink-mcp/: Cargo.toml
src-tauri/tuxlink-mcp-core/: Cargo.toml
src-tauri/tuxlink-mcp-testserver/: Cargo.toml
src-tauri/tuxlink-routines/: Cargo.toml
src-tauri/tuxlink-security/: Cargo.toml
src-tauri/tuxlink-stt/: Cargo.toml
src-tauri/tuxlink-vara-ini/: Cargo.toml
tools/pattern-gen/: Cargo.toml
tuxmodem/: Cargo.toml  README.md
xtask/: Cargo.toml  README.md
xtask/src/: lib.rs
(+2902 files in other folders)
