[package]
name = "hf-channel-sim"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Watterson-class HF ionospheric channel simulator. Pure-Rust, deterministic, AGPLv3-only."
repository = "https://github.com/cameronzucker/hf-channel-sim"
readme = "README.md"
keywords = ["hf", "radio", "channel-model", "watterson", "ionospheric"]
categories = ["science", "simulation"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_distr = "0.4"
rand_xoshiro = "0.6"
num-complex = "0.4"
rustfft = "6"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
proptest = "1"

[[bin]]
name = "hf-channel-sim-cli"
path = "src/bin/hf-channel-sim-cli.rs"
