[package]
name = "hf-channel-sim"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Watterson-class HF ionospheric channel simulator with ITU-R F.520/F.1487 conditions, per-sub-carrier SNR estimation, and AI-agent-friendly structured JSON output. Pure-Rust, deterministic, AGPLv3."
repository = "https://github.com/cameronzucker/hf-channel-sim"
documentation = "https://docs.rs/hf-channel-sim"
readme = "README.md"
keywords = ["hf", "radio", "watterson", "channel", "modem"]
categories = ["science", "simulation", "command-line-utilities"]
authors = ["tuxmodem contributors"]
rust-version = "1.75"
exclude = ["tests/fixtures/*.f32", ".github/"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_distr = "0.4"
rand_xoshiro = "0.6"
num-complex = "0.4"
rustfft = "6"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
proptest = "1"

[[bin]]
name = "hf-channel-sim-cli"
path = "src/bin/hf-channel-sim-cli.rs"
