[workspace]
resolver = "2"
members = [
    "crates/sonde-fec",
    "crates/sonde-phy",
    "crates/sonde-rig-cm108",
    "crates/sonde-rig-rts",
    "crates/sonde-tx",
    "crates/sonde-rx",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "AGPL-3.0-only"
repository = "https://github.com/cameronzucker/tuxlink"
authors = ["Cameron Zucker <cameronzucker@gmail.com>"]

[workspace.dependencies]
num-complex = "0.4"
rustfft = "6"
thiserror = "1"
# Subsystem #1: path-dep until #1 publishes to crates.io as `hf-channel-sim` v0.1.
# Once published, replace `path = ...` with `version = "0.1"`. Member crates
# opt-in via `hf-channel-sim.workspace = true` under [dev-dependencies].
hf-channel-sim = { path = "../hf-channel-sim" }
sonde-fec = { path = "crates/sonde-fec" }
sonde-phy = { path = "crates/sonde-phy" }
sonde-rig-rts = { path = "crates/sonde-rig-rts" }
bitvec = "1"
crc = "3"
rand = "0.8"
rand_chacha = "0.3"
proptest = "1"
criterion = "0.5"
hound = "3"           # .wav read/write for audio_loopback_check + bench-rig captures
cpal = "0.15"         # feature-gated; default-off
