[package]
name = "tuxlink"
version = "0.0.1"
description = "Linux-native full-capability Winlink client"
authors = ["Cameron Zucker <cameronzucker@gmail.com>"]
edition = "2021"
rust-version = "1.75"
# With the helper bins in src/bin/ (live_cms_smoke, native_cms_probe), a bare
# `cargo run` / `tauri dev` is ambiguous; name the app binary as the default.
default-run = "tuxlink"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }  # tuxlink-z5f: dropped "blocking" — PatClient is async to avoid runtime-drop panic in #[tokio::test] contexts
tokio = { version = "1", features = ["full"] }
nix = { version = "0.28", features = ["signal", "process"] }
thiserror = "1"            # NEW — for ConfigValidationError + ConfigReadError + ConfigWriteError
tempfile = "3"             # PROMOTED from [dev-dependencies] below
async-trait = "0.1"        # NEW (tuxlink-z5f) — WinlinkBackend trait async-fn macro for object-safety
futures = "0.3"            # NEW (tuxlink-z5f) — Stream + BoxStream for stream_log return type
tokio-stream = { version = "0.1", features = ["sync"] }  # NEW (tuxlink-z5f) — BroadcastStream wrapper
# Linux backend MUST be the freedesktop Secret Service (D-Bus), NOT the crate's
# mock store. With no features, keyring 3.x falls back to `mock` on Linux
# (lib.rs `pub use mock as default`) — an in-process store that vanishes and is
# invisible to tuxlink-pat's go-keyring reader. `sync-secret-service` selects the
# real Secret Service backend (`secret_service as default`); `crypto-rust` makes
# the encrypted-session crypto pure-Rust. Both are pure-Rust: no `libsecret`/
# OpenSSL C dependency. This is the wizard↔Pat cross-process contract per
# docs/superpowers/specs/2026-05-18-cred-handling-design.md §3.1/§3.3.
# NOTE: keyring 3.6.3 has no `use_native_store()` — backend is a compile-time
# feature; `Entry::new()` auto-resolves to the selected `default` module.
keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
mail-parser = "0.9"        # NEW (tuxlink-y5c Task 13) — pure-Rust RFC5322/MIME parser; spec §8
chrono = { version = "0.4", default-features = false, features = ["clock"] }  # NEW (tuxlink-dm8, Task 14) — RFC3339 timestamp for message_send; `serde` unused (Codex fix)
tauri-plugin-window-state = "2"                            # NEW (tuxlink-dm8, Task 14) — per-compose-window geometry persistence (spec §8)
md-5 = "0.10"              # NEW (tuxlink-0ic) — Winlink secure-login response is MD5 of challenge+password+salt; RustCrypto, pairs with the `digest` crate already present, pure-Rust (no C dep)
native-tls = "0.2"         # NEW (tuxlink-0ic) — TLS-wrapped telnet to the CMS (CmsSsl, port 8773), the default transport like Winlink Express; reuses the OpenSSL already pulled in by reqwest's default-tls
serialport = "4"           # NEW (tuxlink-7fr P2) — KISS over USB-serial COM and Bluetooth RFCOMM (/dev/rfcommN); pure-Rust, no libudev C dep needed for open/read/write
libc = "0.2"               # NEW (tuxlink-nx2) — AF_BLUETOOTH/BTPROTO_RFCOMM socket for the in-app Bluetooth transport (no rfcomm bind / no root / no serialport TTY)

[dev-dependencies]
mockito = "1.5"
serial_test = "3"          # NEW — gates env-var-mutating tests

[lib]
name = "tuxlink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tuxlink"
path = "src/main.rs"

# Operator-only live-CMS smoke test (tuxlink-nk7, Task 6). NOT a test target —
# `cargo test` does not discover or run it. Transmits under the operator's
# amateur callsign; the licensee runs it manually with runtime consent.
[[bin]]
name = "live_cms_smoke"
path = "src/bin/live_cms_smoke.rs"
