[package]
name = "tuxlink"
version = "0.0.1"
description = "Linux-native full-capability Winlink client"
authors = ["Cameron Zucker <cameronzucker@gmail.com>"]
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0-or-later"
# With the helper bin in src/bin/ (native_cms_probe), a bare
# `cargo run` / `tauri dev` is ambiguous; name the app binary as the default.
default-run = "tuxlink"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"  # tuxlink-0fyj — native Save As dialog for MessageView attachment download
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }  # tuxlink-z5f: dropped "blocking" — PatClient is async to avoid runtime-drop panic in #[tokio::test] contexts
tokio = { version = "1", features = ["full"] }
nix = { version = "0.31", features = ["signal", "process"] }
thiserror = "2"            # NEW — for ConfigValidationError + ConfigReadError + ConfigWriteError
tempfile = "3"             # PROMOTED from [dev-dependencies] below
async-trait = "0.1"        # NEW (tuxlink-z5f) — WinlinkBackend trait async-fn macro for object-safety
futures = "0.3"            # NEW (tuxlink-z5f) — Stream + BoxStream for stream_log return type
tokio-stream = { version = "0.1", features = ["sync"] }  # NEW (tuxlink-z5f) — BroadcastStream wrapper
# Linux backend MUST be the freedesktop Secret Service (D-Bus), NOT the crate's
# mock store. With no features, keyring 3.x falls back to `mock` on Linux
# (lib.rs `pub use mock as default`) — an in-process store that vanishes and is
# invisible to tuxlink-pat's go-keyring reader. `sync-secret-service` selects the
# real Secret Service backend (`secret_service as default`); `crypto-rust` makes
# the encrypted-session crypto pure-Rust. Both are pure-Rust: no `libsecret`/
# OpenSSL C dependency. This is the wizard↔Pat cross-process contract per
# docs/superpowers/specs/2026-05-18-cred-handling-design.md §3.1/§3.3.
# NOTE: keyring 3.6.3 has no `use_native_store()` — backend is a compile-time
# feature; `Entry::new()` auto-resolves to the selected `default` module.
keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
mail-parser = "0.11"        # NEW (tuxlink-y5c Task 13) — pure-Rust RFC5322/MIME parser; spec §8
chrono = { version = "0.4", default-features = false, features = ["clock"] }  # NEW (tuxlink-dm8, Task 14) — RFC3339 timestamp for message_send; `serde` unused (Codex fix)
tauri-plugin-window-state = "2"                            # NEW (tuxlink-dm8, Task 14) — per-compose-window geometry persistence (spec §8)
md-5 = "0.11"              # NEW (tuxlink-0ic) — Winlink secure-login response is MD5 of challenge+password+salt; RustCrypto, pairs with the `digest` crate already present, pure-Rust (no C dep)
native-tls = "0.2"         # NEW (tuxlink-0ic) — TLS-wrapped telnet to the CMS (CmsSsl, port 8773), the default transport like Winlink Express; reuses the OpenSSL already pulled in by reqwest's default-tls
serialport = "4"           # NEW (tuxlink-7fr P2) — KISS over USB-serial COM and Bluetooth RFCOMM (/dev/rfcommN); pure-Rust, no libudev C dep needed for open/read/write
libc = "0.2"               # NEW (tuxlink-nx2) — AF_BLUETOOTH/BTPROTO_RFCOMM socket for the in-app Bluetooth transport (no rfcomm bind / no root / no serialport TTY)
rusqlite = { version = "0.40", features = ["bundled", "modern_sqlite"] }  # NEW (tuxlink-1hu) — FTS5-indexed search; bundled SQLite ≥ 3.9 ensures FTS5 is compiled in
uuid = { version = "1.23", features = ["v4", "serde"] }  # NEW (tuxlink-1hu) — saved-search IDs
rand = "0.9"               # NEW (tuxlink-4ek Task 3.1) — RADIO-1 consent-token mint (16 hex chars); intra-process replay protection, not a secret
quick-xml = { version = "0.40", default-features = false, features = ["serialize"] }  # NEW (tuxlink-v1p T1.3) — XML parse/serialize for HTML Forms; per spec §10 (hardening) + plan rev-4 T1.3
axum = "0.8"                                     # NEW (tuxlink-ytya P1) — lazy loopback HTTP server for HTML Forms webview path; design §5.3
tower = { version = "0.5", features = ["util"] } # NEW (tuxlink-ytya P1) — service composition for the form-server router
tower-http = { version = "0.6", features = ["fs", "cors"] }  # NEW (tuxlink-ytya P1) — static-file serving for WLE asset subtree
mime = "0.3"                                     # NEW (tuxlink-ytya P1) — Content-Type construction in form-server responses
multer = "3"                                     # NEW (tuxlink-ytya P1) — multipart/form-data parser preserving repeated names + submitter per design §5.3
percent-encoding = "2"                           # NEW (tuxlink-ytya P1) — urlencoded body parse where multer doesn't apply
walkdir = "2"                                    # NEW (tuxlink-ytya P1) — bundled + custom WLE template recursive enumeration
bytes = "1"                                      # NEW (tuxlink-ytya P1) — request body buffer passed to multer's stream-once wrapper
subtle = "2.6"                                   # NEW (tuxlink-3o2o) — constant-time byte comparison for StationPassword::verify; prevents timing side-channels on listener-mode password challenges
sha2 = "0.10"                                    # NEW (tuxlink-3o2o) — fixed-size digest for password verify; eliminates length-oracle in ct_eq_strings (Codex 2026-06-03)
regex = "1"                                      # NEW (tuxlink-7do4 Codex BLOCKER #1) — case-insensitive + embedded ;PR:/;PQ: scanner for redaction.rs
once_cell = "1"                                  # NEW (tuxlink-7do4 CI fix) — Lazy<T> for sub-MSRV-1.80 LazyLock replacement in redaction.rs (rust-version = "1.75")

[dev-dependencies]
mockito = "1.5"
serial_test = "3"          # NEW — gates env-var-mutating tests
proptest = "1.4"           # NEW (tuxlink-c79g T7) — state-space matrix tests for position arbiter invariants I1-I5

[lib]
name = "tuxlink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tuxlink"
path = "src/main.rs"

