[package]
name = "tuxlink"
version = "0.70.0"
description = "Linux-native full-capability Winlink client"
authors = ["Cameron Zucker <cameronzucker@gmail.com>"]
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0-or-later"
# With the helper bin in src/bin/ (native_cms_probe), a bare
# `cargo run` / `tauri dev` is ambiguous; name the app binary as the default.
default-run = "tuxlink"

[features]
# `heif` (default-on) compiles HEIC/HEIF decode via libheif-rs, which pkg-configs
# system libheif >= 1.17. Builds for older distros below that floor (EmComm Tools
# / Ubuntu 22.10, Debian 12 Bookworm) build with `--no-default-features` (re-add
# the others); a HEIC attachment then returns a clear unsupported error instead
# of failing to compile. See docs/adr/0020-linux-support-matrix-and-build-floor.md.
default = ["heif"]
heif = ["dep:libheif-rs"]

# test-support exposes test-only seams (e.g. IdentityHandle::for_test) to
# integration tests under tests/ + examples/benches, which link the non-test
# lib build and therefore cannot see #[cfg(test)] items. The [dev-dependencies]
# self-path-dep below turns this feature on automatically for test/example/bench
# builds; release `cargo build` does NOT pull dev-dependencies, so the seam
# stays out of production (the keyring-mintable-only security property holds).
test-support = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `unstable` exposes the multi-webview Rust API (`Manager::get_webview`) that
# forms::pdf_export (tuxlink-cumx / G8) needs to reach a form's child WebKitGTK
# view by label. The app already depends on multi-webview at the JS layer
# (WebviewFormHost/Viewer construct child `Webview`s), so this only surfaces the
# matching Rust accessor — no new runtime capability. Pinned via the lockfile to
# 2.11.x; `unstable` is API-churn risk across Tauri minors, not a runtime flag.
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"  # tuxlink-0fyj — native Save As dialog for MessageView attachment download
# Image transcode for attach-time resize (tuxlink-mg4s). image = pure-Rust
# decode/resize/JPEG-encode; libheif-rs = HEIC ingest (libheif C lib);
# webp = lossy WebP encode (libwebp C lib). System libs (libheif/libde265/
# libwebp) installed by CI + bundled as .deb depends — see the mg4s plan.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "tiff", "bmp"] }
# Pinned EXACTLY to 1.0.2: it uses libheif-sys ^2.1 (→ 2.2.1+1.17.6), which
# pkg-configs against the libheif the build/target distro actually ships
# (Ubuntu 24.04 = libheif 1.17.6). libheif-rs 2.x pulls libheif-sys 5.x which
# requires libheif>=1.21 (NOT in 24.04 — CI build-script fails). 1.1.0 jumps to
# libheif-sys ^3.1, so caret is unsafe — exact pin. The decode API
# (LibHeif::new + ctx.read_from_bytes + lib.decode + planes().interleaved) is
# identical in 1.0.2, so transcode.rs is unchanged.
libheif-rs = { version = "=1.0.2", optional = true }
webp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "multipart", "stream", "gzip", "form"] }  # tuxlink-z5f: dropped "blocking" — PatClient is async to avoid runtime-drop panic in #[tokio::test] contexts. tuxlink-xipa Codex P1 #1: "stream" added for forms::updater::download_archive chunked size enforcement. tuxlink-k61j: "gzip" — TileServer-GL/nginx serve tiles with Content-Encoding: gzip; the tile client must decompress so the image magic-byte check sees the real image, not gzip bytes. tuxlink-vfb3: "form" — reqwest 0.13 moved RequestBuilder::form() behind this feature (was default in 0.12); the CMS account API posts x-www-form-urlencoded.
tokio = { version = "1", features = ["full"] }
nix = { version = "0.31", features = ["signal", "process", "fs"] }  # "fs" (tuxlink-ndi4): statvfs free-space pre-flight before a region-pack download
thiserror = "2"            # NEW — for ConfigValidationError + ConfigReadError + ConfigWriteError
tempfile = "3"             # PROMOTED from [dev-dependencies] below
flate2 = "1"               # PROMOTED from [dev-dependencies] (tuxlink-ndi4) — basemap::validate decompresses gzip PMTiles metadata in production code, not just test fixtures
async-trait = "0.1"        # NEW (tuxlink-z5f) — WinlinkBackend trait async-fn macro for object-safety
futures = "0.3"            # NEW (tuxlink-z5f) — Stream + BoxStream for stream_log return type
tokio-stream = { version = "0.1", features = ["sync"] }  # NEW (tuxlink-z5f) — BroadcastStream wrapper
# Linux backend MUST be the freedesktop Secret Service (D-Bus), NOT the crate's
# mock store. With no features, keyring 3.x falls back to `mock` on Linux
# (lib.rs `pub use mock as default`) — an in-process store that vanishes and is
# invisible to tuxlink-pat's go-keyring reader. `sync-secret-service` selects the
# real Secret Service backend (`secret_service as default`); `crypto-rust` makes
# the encrypted-session crypto pure-Rust. Both are pure-Rust: no `libsecret`/
# OpenSSL C dependency. This is the wizard↔Pat cross-process contract per
# docs/superpowers/specs/2026-05-18-cred-handling-design.md §3.1/§3.3.
# NOTE: keyring 3.6.3 has no `use_native_store()` — backend is a compile-time
# feature; `Entry::new()` auto-resolves to the selected `default` module.
keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
mail-parser = "0.11"        # NEW (tuxlink-y5c Task 13) — pure-Rust RFC5322/MIME parser; spec §8
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }  # NEW (tuxlink-dm8, Task 14) — RFC3339 timestamp + serde for alpha-logging Settings TOML (tuxlink-qjgx)
tauri-plugin-window-state = "2"                            # NEW (tuxlink-dm8, Task 14) — per-compose-window geometry persistence (spec §8)
md-5 = "0.11"              # NEW (tuxlink-0ic) — Winlink secure-login response is MD5 of challenge+password+salt; RustCrypto, pairs with the `digest` crate already present, pure-Rust (no C dep)
native-tls = "0.2"         # NEW (tuxlink-0ic) — TLS-wrapped telnet to the CMS (CmsSsl, port 8773), the default transport like Winlink Express; reuses the OpenSSL already pulled in by reqwest's default-tls
serialport = "4"           # NEW (tuxlink-7fr P2) — KISS over USB-serial COM and Bluetooth RFCOMM (/dev/rfcommN); pure-Rust, no libudev C dep needed for open/read/write
libc = "0.2"               # NEW (tuxlink-nx2) — AF_BLUETOOTH/BTPROTO_RFCOMM socket for the in-app Bluetooth transport (no rfcomm bind / no root / no serialport TTY)
rusqlite = { version = "0.40", features = ["bundled", "modern_sqlite"] }  # NEW (tuxlink-1hu) — FTS5-indexed search; bundled SQLite ≥ 3.9 ensures FTS5 is compiled in
uuid = { version = "1", features = ["v4", "v7", "serde"] }  # NEW (tuxlink-1hu) — saved-search IDs; v7 added for alpha-logging boot_id
rand = "0.10"               # NEW (tuxlink-4ek Task 3.1) — RADIO-1 consent-token mint (16 hex chars); intra-process replay protection, not a secret
quick-xml = { version = "0.40", default-features = false, features = ["serialize"] }  # NEW (tuxlink-v1p T1.3) — XML parse/serialize for HTML Forms; per spec §10 (hardening) + plan rev-4 T1.3
axum = "0.8"                                     # NEW (tuxlink-ytya P1) — lazy loopback HTTP server for HTML Forms webview path; design §5.3
tower = { version = "0.5", features = ["util"] } # NEW (tuxlink-ytya P1) — service composition for the form-server router
tower-http = { version = "0.7", features = ["fs", "cors"] }  # NEW (tuxlink-ytya P1) — static-file serving for WLE asset subtree
mime = "0.3"                                     # NEW (tuxlink-ytya P1) — Content-Type construction in form-server responses
multer = "3"                                     # NEW (tuxlink-ytya P1) — multipart/form-data parser preserving repeated names + submitter per design §5.3
percent-encoding = "2"                           # NEW (tuxlink-ytya P1) — urlencoded body parse where multer doesn't apply
walkdir = "2"                                    # NEW (tuxlink-ytya P1) — bundled + custom WLE template recursive enumeration
bytes = "1"                                      # NEW (tuxlink-ytya P1) — request body buffer passed to multer's stream-once wrapper
subtle = "2.6"                                   # NEW (tuxlink-3o2o) — constant-time byte comparison for StationPassword::verify; prevents timing side-channels on listener-mode password challenges
sha2 = "0.11"                                    # NEW (tuxlink-3o2o) — fixed-size digest for password verify; eliminates length-oracle in ct_eq_strings (Codex 2026-06-03)
printpdf = "0.9"                                 # NEW (tuxlink-hnkn P2 Task 2) — ICS-309 PDF export; operator decision 2026-06-04; ~500KB compiled
zip = { version = "2", default-features = false, features = ["deflate"] }  # NEW (tuxlink-xipa Phase 3) — extract winlink.org Standard Forms zip into the runtime forms snapshot. default-features off + deflate-only keeps the dep weight down (bzip2 / aes / zstd not needed for WLE archives).
# alpha-logging (tuxlink-qjgx) — tracing pipeline + export + redaction
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }
tracing-appender = "0.2"
# NOTE per plan-adrev v2 §1: zstd 0.13 exposes dictionary APIs via the DEFAULT
# feature set. There is NO "zdict" cargo feature in zstd 0.13. Omit features.
zstd = "0.13"
tar = "0.4"
dirs = "6"
hex = "0.4"
strip-ansi-escapes = "0.2"
toml = "1.1"               # Task 6.1 settings persistence
urlencoding = "2"          # Task 8.1 GitHub URL body encoding
# uuid and chrono features merged into existing entries above (v4+v7+serde, clock+serde).
# regex + once_cell were added on main as part of tuxlink-7do4 (Codex BLOCKER #1
# redaction scanner) — our stricter version pins (1.10 / 1.20) are compatible
# with main's "1" / "1" and cover both alpha-logging + redaction use cases.
once_cell = "1.20"
regex = "1.10"
mini_sbc = "0.1.7"        # NEW (tuxlink-vgvn) — pure-Rust SBC DECODER for the UV-Pro SSTV audio transport; MIT/Apache (GPL-3 compatible). Encode is a from-scratch port (no pure-Rust SBC encoder on crates.io). Decode verified MAE 6.7 vs ffmpeg golden vectors.

# tuxlink-cumx / G8 — faithful PDF export drives the live form's WebKitGTK view
# via WebKitPrintOperation. Both crates are already in the build (transitive via
# wry); naming them here exposes `webkit2gtk::PrintOperation` + `gtk::PrintSettings`
# to forms::pdf_export. Pinned to the versions wry resolves (2.0.2 / 0.18.2) so
# Cargo unifies rather than pulling a second copy (a type-mismatch on the
# WebView handle `PlatformWebview::inner()` returns). Linux-only: tuxlink ships
# Linux exclusively and gtk/webkit are only present on that target.
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "=2.0.2"
gtk = "=0.18.2"

[dev-dependencies]
# Self path-dependency: enables the `test-support` feature for test/example/bench
# builds (plain `cargo test` picks it up automatically — no CI flag needed).
# Release `cargo build` does not resolve dev-dependencies, so `for_test` and
# other test-support seams stay out of production binaries.
tuxlink = { path = ".", features = ["test-support"] }
filetime = "0.2"           # retention sweep clock-grace test fixtures (unit + integration)
mockito = "1.5"
serial_test = "3"          # NEW — gates env-var-mutating tests
proptest = "1.4"           # NEW (tuxlink-c79g T7) — state-space matrix tests for position arbiter invariants I1-I5
static_assertions = "1.1"  # alpha-logging (tuxlink-qjgx) — credential-struct Debug audit test
tracing-test = "0.2"       # alpha-logging (tuxlink-qjgx) — Task 9.1 emission-coverage tests
syn = { version = "2", features = ["full", "parsing", "visit"] }  # alpha-logging (tuxlink-qjgx) — credential struct source-scan (§10.2 #9)
quote = "1"                # alpha-logging (tuxlink-qjgx) — ToTokens for type normalization in source-scan

[lib]
name = "tuxlink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tuxlink"
path = "src/main.rs"

# tuxlink-1n3n: the amd64 CI `verify` runner intermittently SIGBUSes inside
# `rust-lld` while LINKING the test binaries (lib test + wizard_integration_test).
# Cargo's default dev/test debuginfo is `2` (full), and the test-binary link
# pulls in ~250 dependency rlibs' debug sections — enough debug data that lld
# exhausts the runner's memory and crashes ("ld terminated with signal 7 [Bus
# error]"). `line-tables-only` keeps backtrace line numbers (so panics/tests stay
# debuggable) while dropping the heavy variable/type debug info the linker chokes
# on. Set on `dev` because `cargo test` builds the library + dependencies under
# the dev profile (only the test/bench TARGETS use the test profile); `test`
# inherits `dev`, and the explicit `[profile.test]` below makes the intent
# obvious for the test targets too. Release artifacts are unaffected.
[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"
