# tuxlink-agent-frontend — shared model-adapter + MCP-client helpers for the
# Elmer assistant spine.
#
# This lib crate holds the REUSABLE pieces that d3zwe (the headless terminal
# frontend) and the Tauri monolith (the Elmer pane, Task B1-B4) both need:
#
#   * `endpoint`  — SEC-5 loopback/metadata enforcement for the model endpoint URL.
#   * `provider`  — `OpenAiProvider`: an `OpenAI`-compatible chat-completions
#     adapter that implements `tuxlink_agent_runner::Provider`.
#   * `mcp_client` — transport-agnostic rmcp helpers: `tool_spec_from_rmcp`,
#     `classify_call_error`, `extract_result_text`, `map_call_result`,
#     `list_tools_as_specs`.
#
# d3zwe keeps only its UDS-specific wiring (`UdsToolInvoker`, `ConnectError`,
# `default_socket_path`, `ABORT_TOOLS`); the monolith will supply its own
# transport and reuse the helpers here.
#
# Acyclic dep chain: tuxlink-agent-frontend → tuxlink-agent-runner (runner loop
# types/traits only; no Tauri, no tuxlink-security).
[package]
name = "tuxlink-agent-frontend"
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
# Runner types: Provider, ToolInvoker, ToolSpec, ToolOutcome, etc.
tuxlink-agent-runner = { path = "../tuxlink-agent-runner" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

# EndpointError uses thiserror; same "1" the monolith already pins.
thiserror = "2"

# URL parsing + SEC-5 host classification.
url = "2"

# HTTP client for OpenAiProvider (same 0.13 the lockfile already resolves).
# `stream` (tuxlink-e2vw7): `Response::bytes_stream()` is gated behind reqwest's
# `stream` feature; the streaming provider (phase 1b) reads the SSE body chunk by
# chunk through it. The monolith (`tuxlink` package) already enables `stream`, so
# workspace feature-unification would supply it transitively — but declaring it
# here keeps a standalone `cargo test -p tuxlink-agent-frontend` building too,
# rather than depending on a sibling crate's feature set. No new lockfile entry:
# reqwest 0.13's `stream` feature pulls only crates already resolved.
reqwest = { version = "0.13", features = ["json", "stream"] }

# `StreamExt::next` over `reqwest::Response::bytes_stream()` (tuxlink-e2vw7).
# futures-util 0.3 is already in the lockfile (reqwest depends on it), so this
# adds no new resolution; it is MSRV-1.75 compatible (futures 0.3 supports far
# older toolchains). `default-features = false` keeps it to the `Stream` combinators
# we need (no executor / io / compat layers).
futures-util = { version = "0.3", default-features = false }

# rmcp client types: Tool, CallToolResult, RunningService<RoleClient, ()>,
# ServiceError, ServiceExt.  `client` + `transport-async-rw` match d3zwe's
# feature set (no new major, same lockfile resolution).
rmcp = { version = "0.8", features = ["client", "transport-async-rw"] }

# tokio::sync::OnceCell (tuxlink-xnenf): memoizes OpenAiProvider's best-effort
# GET /v1/models context-window probe so it runs at most once per provider
# instance. `sync` is the only feature the lib target needs; already resolved
# workspace-wide (the `tuxlink` root crate pulls tokio with "full"), so this
# adds no new Cargo.lock entry.
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
