[package]
name = "tuxlink-capture"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "AGPL-3.0-or-later"
description = "Station Intelligence L2 pure-logic leaf: 48k→12k decimator, wall-clock-true slot assembler, slot-WAV writer, listener state machine, FT8 band table."

[dependencies]

[dev-dependencies]
tuxlink-jt9 = { path = "../tuxlink-jt9" }
